--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,41 @@
   </head>
 
   <body>
+    <header class="bg-swiss-red p-7 flex items-center justify-between text-white font-semibold text-xl">
+      <a href="/">
+        <%= image_tag ("logo.svg") %>
+      </a>
+      <nav>
+        <ul class="flex gap-24">
+          <li> 
+            <a href="#" class="hover:text-gold">
+              Home
+            </a>
+            </li>
+          <li> 
+            <a href="#" class="hover:text-gold">
+              About
+            </a>
+            </li>
+          <li> 
+            <a href="#" class="hover:text-gold">
+              How to use
+            </a>
+            </li>
+          <li> 
+            <a href="#" class="hover:text-gold">
+              Contact
+            </a>
+            </li>
+        </ul>
+      </nav>
+      <div class="flex gap-7">
+       <a href="#" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full" >Sign up</a>
+       <a href="#" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full" >Log in</a>
+      </div>
+    </header>
     <main class="container mx-auto mt-28 px-5 flex">
+
       <%= yield %>
     </main>
   </body>
