--- a/app/views/card_collections/index.html.erb
+++ b/app/views/card_collections/index.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "Card collections" %>
 
-<h1>Card collections</h1> 
+<h1 class="text-4xl">Card collections</h1> 
 
 <div id="card_collections">
 
