--- a/app/views/card_collections/new.html.erb
+++ b/app/views/card_collections/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "New card collection" %>
 
-<h1>New card collection</h1>
+<h1 class="text-4xl">Create a new practice deck</h1>
 
 <%= render "form", card_collection: @card_collection %>
 
