--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
-  }
+@font-face {
+  font-family: 'AkzidenzGrotesk';
+  src: url('/fonts/AkzidenzGrotesk.ttf');
 }
 
-*/
+h1, h2, h3 {
+  font-family: 'AkzidenzGrotesk';
+}
