--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,11 +48,19 @@
         </ul>
       </nav>
       <div class="flex gap-7">
+        <%= link_to new_card_collection_path, class: "flex items-center justify-center h-14 w-14 bg-white hover:bg-gold text-black rounded-full" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
+          </svg>
+        <% end %>
+       <a href="#" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full self-center" >Log out</a>
+      </div>
+      <%# <div class="flex gap-7">
        <a href="#" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full" >Sign up</a>
        <a href="#" class="py-3 px-6 bg-white hover:bg-gold text-black rounded-full" >Log in</a>
-      </div>
+      </div> %>
     </header>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="container mx-auto mt-12 px-5 flex flex-col">
 
       <%= yield %>
     </main>
