some styles for practice decks

--- a/app/views/card_collections/_card_collection.html.erb
+++ b/app/views/card_collections/_card_collection.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id card_collection %>">
   <p>
-    <strong>Name:</strong>
+    <strong>Title:</strong>
     <%= card_collection.name %>
   </p>
 
