--- a/app/views/card_collections/edit.html.erb
+++ b/app/views/card_collections/edit.html.erb
@@ -1,12 +1,12 @@
-<% content_for :title, "Editing card collection" %>
+<% content_for :title, "Editing practice deck" %>
 
-<h1>Editing card collection</h1>
+<h1>Editing practice deck</h1>
 
 <%= render "form", card_collection: @card_collection %>
 
 <br>
 
 <div>
-  <%= link_to "Show this card collection", @card_collection %> |
-  <%= link_to "Back to card collections", card_collections_path %>
+  <%= link_to "Show this practice deck", @card_collection %> |
+  <%= link_to "Back to practice decks", card_collections_path %>
 </div>
