--- a/app/views/card_collections/new.html.erb
+++ b/app/views/card_collections/new.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "New card collection" %>
+<% content_for :title, "New practice deck" %>
 
 <h1 class="text-4xl">Create a new practice deck</h1>
 
@@ -7,5 +7,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to card collections", card_collections_path %>
+  <%= link_to "Back to practice decks", card_collections_path %>
 </div>
