--- a/app/views/card_collections/show.html.erb
+++ b/app/views/card_collections/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @card_collection %>
 
 <div>
-  <%= link_to "Edit this card collection", edit_card_collection_path(@card_collection) %> |
-  <%= link_to "Back to card collections", card_collections_path %>
+  <%= link_to "Edit this practice deck", edit_card_collection_path(@card_collection) %> |
+  <%= link_to "Back to practice decks", card_collections_path %>
 
-  <%= button_to "Destroy this card collection", @card_collection, method: :delete %>
+  <%= button_to "Delete this practice deck", @card_collection, method: :delete %>
 </div>
