added side menu

--- a/app/views/card_collections/_card_collection.html.erb
+++ b/app/views/card_collections/_card_collection.html.erb
@@ -1,12 +1,11 @@
 <div id="<%= dom_id card_collection %>">
-  <p>
-    <strong>Title:</strong>
+  <p class="font-semibold text-xl mb-5">
     <%= card_collection.name %>
   </p>
 
-  <p>
-    <strong>Description:</strong>
+  <p class="mb-5">
     <%= card_collection.description %>
   </p>
+
 
 </div>
