--- a/app/views/card_collections/show.html.erb
+++ b/app/views/card_collections/show.html.erb
@@ -1,10 +1,14 @@
 <p style="color: green"><%= notice %></p>
-
 <%= render @card_collection %>
-
 <div>
   <%= link_to "Edit this practice deck", edit_card_collection_path(@card_collection) %> |
   <%= link_to "Back to practice decks", card_collections_path %>
-
   <%= button_to "Delete this practice deck", @card_collection, method: :delete %>
 </div>
+<h2>Cards</h2>
+<% @card_collection.cards.each do |card| %>
+  <p>Question</p>
+  <%= card.question %>
+  <p>Answer</p>
+  <%= card.answer %>
+<%end%>
