--- a/app/views/card_collections/_form.html.erb
+++ b/app/views/card_collections/_form.html.erb
@@ -3,32 +3,41 @@
     <div style="color: red">
       <h2><%= pluralize(card_collection.errors.count, "error") %> prohibited this card_collection from being saved:</h2>
       <ul>
-        <% card_collection.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <% card_collection.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
-  <div class="flex items-center border-b border-gray-300 w-fit min-w-96">
-    <%= form.label :name, "Title", style: "display: block" %>
-    <%= form.text_field :name, placeholder: "Enter the title of the deck", class: "px-3 py-2 w-full border-none focus:outline-none focus:ring-0" %>
-  </div>
-  <div class="flex items-center border-b border-gray-300 w-fit min-w-96">
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description, placeholder: "Enter a description of the deck", class: "px-3 py-2 w-full border-none focus:outline-none focus:ring-0"  %>
-  </div>
-  <%= form.fields_for :cards do |card_form| %>
-    <div class="flex">
-      <div>
-        <%= card_form.label :question, "Question", style: "display: block" %>
-        <%= card_form.text_field :question, placeholder: "Enter the question", class: "px-3 py-2 w-full border-none focus:outline-none focus:ring-0" %>
-      </div>
-      <div>
-        <%= card_form.label :answer, "Answer", style: "display: block" %>
-        <%= card_form.text_field :answer, placeholder: "Enter the answer", class: "px-3 py-2 w-full border-none focus:outline-none focus:ring-0" %>
-      </div>
+  <div class="mb-10">
+    <div class="flex items-center mb-5 border-b border-gray-300 w-fit min-w-96">
+      <%= form.label :name, "Title", style: "display: block", class: "font-bold" %>
+      <%= form.text_field :name, placeholder: "Enter the title of the deck", class: "px-3 py-2 w-full border-none focus:outline-none focus:ring-0" %>
     </div>
-  <% end %>
+    <div class="flex items-center border-b border-gray-300 w-fit min-w-96">
+      <%= form.label :description, style: "display: block", class: "font-bold" %>
+      <%= form.text_field :description, placeholder: "Enter a description of the deck", class: "px-3 py-2 w-full border-none focus:outline-none focus:ring-0" %>
+    </div>
+  </div>
+  <div class="card-fields-container">
+    <%= form.fields_for :cards do |card_form| %>
+      <% if card_form.index < 5 %>
+        <div class="flex mb-5 card-field">
+          <div class="flex items-center border-b border-gray-300 w-fit min-w-96 mr-20">
+            <%= card_form.label :question, "Question", style: "display: block", class: "font-bold" %>
+            <%= card_form.text_area :question, placeholder: "Write a question", class: "px-3 py-2 w-full border-none focus:outline-none focus:ring-0 h-[40px]" %>
+          </div>
+          <div class="flex items-center border-b border-gray-300 w-fit min-w-96">
+            <%= card_form.label :answer, "Answer", style: "display: block", class: "font-bold" %>
+            <%= card_form.text_area :answer, placeholder: "Write an answer", class: "px-3 py-2 w-full border-none focus:outline-none focus:ring-0 h-[40px]" %>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+  <div>
+    <button type="button" id="add-card-btn">Add more pairs</button>
+  </div>
   <div>
     <%= form.submit "Save Collection" %>
   </div>
