--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,37 +59,37 @@
     </header>
     <div class="flex">
       <div class="p-6 w-1/5 border-r border-mercury" id="side-bar">
-        <button class="mb-6" id="toggle-visibility">
+        <button class="mb-6 pl-2" id="toggle-visibility">
           <%= image_tag("icons/eye-open.svg", id: "eye-icon") %>
         </button>
         <nav class="text-lg" id="side-menu" >
           <ul class="flex flex-col" id="side-list">
             <li class="mb-2">
-              <%= link_to "#", class: "flex items-center hover:bg-clear-sky px-2 py-4 rounded-3xl" do %>
+              <%= link_to "#", class: "flex items-center hover:bg-clear-sky px-4 py-4 rounded-3xl" do %>
                 <%= image_tag("icons/home.svg") %>
                 <span class="nav-text ml-5">Home</span>
               <% end %>
             </li>
             <li class="mb-2">
-              <%= link_to "#", class: "flex items-center hover:bg-clear-sky px-2 py-4 rounded-3xl" do %>
+              <%= link_to "#", class: "flex items-center hover:bg-clear-sky px-4 py-4 rounded-3xl" do %>
                 <%= image_tag("icons/profile.svg") %>
                 <span class="nav-text ml-5">Your profile</span>
               <% end %>
             </li>
             <li class="mb-2">
-              <%= link_to "#", class: "flex items-center hover:bg-clear-sky px-2 py-4 rounded-3xl" do %>
+              <%= link_to "#", class: "flex items-center hover:bg-clear-sky px-4 py-4 rounded-3xl" do %>
                 <%= image_tag("icons/your-library.svg") %>
                 <span class="nav-text ml-5">Your library</span>
               <% end %>
             </li>
             <li class="mb-2">
-              <%= link_to "#", class: "flex items-center hover:bg-clear-sky px-2 py-4 rounded-3xl" do %>
+              <%= link_to "#", class: "flex items-center hover:bg-clear-sky px-4 py-4 rounded-3xl" do %>
                 <%= image_tag("icons/base-decks.svg") %>
                 <span class="nav-text ml-5">Base decks</span>
               <% end %>
             </li>
             <li class="mb-2">
-              <%= link_to "#", class: "flex items-center hover:bg-clear-sky px-2 py-4 rounded-3xl" do %>
+              <%= link_to "#", class: "flex items-center hover:bg-clear-sky px-4 py-4 rounded-3xl" do %>
                 <%= image_tag("icons/explore.svg") %>
                 <span class="nav-text ml-5">Explore</span>
               <% end %>
