--- a/app/views/card_collections/_form.html.erb
+++ b/app/views/card_collections/_form.html.erb
@@ -16,10 +16,10 @@
     </div>
     <div class="flex items-center border-b border-gray-300 w-fit min-w-96">
       <%= form.label :description, style: "display: block", class: "font-bold" %>
-      <%= form.text_field :description, placeholder: "Enter a description of the deck", class: "px-3 py-2 w-full border-none focus:outline-none focus:ring-0" %>
+      <%= form.text_area :description, placeholder: "Enter a description of the deck", class: "px-3 py-2 w-full border-none focus:outline-none focus:ring-0 h-[40px]" %>
     </div>
   </div>
-  <div class="card-fields-container">
+  <div class="card-fields-container mb-10">
     <%= form.fields_for :cards do |card_form| %>
       <% if card_form.index < 5 %>
         <div class="flex mb-5 card-field">
@@ -35,10 +35,15 @@
       <% end %>
     <% end %>
   </div>
-  <div>
-    <button type="button" id="add-card-btn">Add more pairs</button>
+  <div class="w-[70%] flex justify-center">
+    <button type="button" id="add-card-btn" class="font-bold flex items-center bg-clear-sky px-4 py-4 rounded-3xl">
+      <span class="mr-4">
+        Add more pairs
+      </span>
+      <%= image_tag("icons/add-more-pairs.svg") %>
+    </button>
   </div>
   <div>
-    <%= form.submit "Save Collection" %>
+    <%= form.submit "Save", class:"py-2 px-4 text-white bg-swiss-red rounded-full cursor-pointer" %>
   </div>
 <% end %>
