--- a/app/views/card_collections/show.html.erb
+++ b/app/views/card_collections/show.html.erb
@@ -17,19 +17,19 @@
       <button>Play</button>
       <button>Shuffle</button>
     </div>
-    <div>
-      <button id="prev" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+    <div class="flex items-center">
+      <button id="prev" class=" text-white font-bold py-2 px-4 rounded"
     data-card-id="<%= @card_collection.cards.first.id %>" data-collection-id="<%= @card_collection.id %>">
-        Previous
+        <%= image_tag("icons/previous-card.svg") %>
       </button>
       <span>
         <span id="card-index">
           <%= @card_collection.cards.index(@card_collection.cards.first) + 1 %> / <%= @card_collection.cards.size %>
         </span>
       </span>
-      <button id="next" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+      <button id="next" class=" text-white font-bold py-2 px-4 rounded"
     data-card-id="<%= @card_collection.cards.first.id %>" data-collection-id="<%= @card_collection.id %>">
-        Next
+        <%= image_tag("icons/next-card.svg") %>
       </button>
     </div>
     <div>
